syntax="proto3";

option csharp_namespace = "Api.Protos";

import "google/api/annotations.proto";

package users;

service User {
  rpc RegisterLecturer (RegisterLecturerRequest) returns (AuthenticationResponse) {
    option (google.api.http) = {
      post: "/api/users/lecturers/register",
      body: "*"
    };
  };

  rpc RegisterStudent (RegisterStudentRequest) returns (AuthenticationResponse) {
    option (google.api.http) = {
      post: "/api/users/students/register",
      body: "*"
    };
  };

  rpc Login (LoginRequest) returns (AuthenticationResponse) {
    option (google.api.http) = {
      post: "/api/users/login",
      body: "*"
    };
  };

  rpc LecturerProfile (LecturerProfileRequest) returns (LecturerProfileResponse) {
    option (google.api.http) = {
      get: "/api/users/lecturers/profile"
    };
  };

  rpc StudentProfile (StudentProfileRequest) returns (StudentProfileResponse) {
    option (google.api.http) = {
      get: "/api/users/students/profile"
    };
  };
}

message RegisterLecturerRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
  string degree = 5;
  string birthday = 6;
  string address = 7;
}

message RegisterStudentRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
  string group_name = 5;
  int32 course = 6;
  string birthday = 7;
  string address = 8;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LecturerProfileRequest { }

message StudentProfileRequest { }

message LecturerProfileResponse {
  string user_id = 1;
  string email = 2;
  string full_name = 3;
  string degree = 4;
  string birthday = 5;
  string address = 6;
}

message StudentProfileResponse {
  string user_id = 1;
  string email = 2;
  string full_name = 3;
  string group = 4;
  string course = 5;
  string birthday = 6;
  string address = 7;
}

message AuthenticationResponse {
  string user_id = 1;
  string email = 2;
  string token = 3;
}